# saml

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  mise.toml
.github/workflows/: audit.yml  ci.yml  release.yml
docs/: interop.md  releasing.md
docs/plans/: tmp-pre-release.md
docs/rfcs/: RFC-001-architecture.md  RFC-002-xml-crypto-core.md  RFC-003-service-provider.md  RFC-004-identity-provider.md  RFC-005-proxy-composition.md  RFC-006-metadata.md  RFC-007-single-logout.md  RFC-008-idp-discovery.md
examples/demo/: .env.example  Cargo.toml  README.md
examples/demo/config/: providers.toml
examples/demo/keys/: sp.crt  sp.key
examples/demo/src/: lib.rs  main.rs  providers.rs  session.rs  templates.rs
examples/demo/static/: dashboard.html.tmpl  index.html.tmpl  style.css
examples/demo/tests/: e2e_smoke.rs
examples/idp/: .env.example  Cargo.toml  README.md
examples/idp/config/: sps.toml  users.toml
examples/idp/keys/: idp.crt  idp.key
examples/idp/src/: auth.rs  lib.rs  main.rs  session.rs  sso.rs  templates.rs
examples/idp/static/: consent.html.tmpl  error.html.tmpl  index.html.tmpl  login.html.tmpl  style.css
examples/idp/tests/: artifact_binding.rs  e2e_loop.rs  idp_initiated_slo.rs
examples/idps/: KEYCLOAK_INTEROP.md  README.md  docker-compose.yml  keycloak_interop.sh
examples/idps/authentik/blueprints/: saml-demo.yaml
examples/idps/fusionauth/: regen_cert.sh
examples/idps/fusionauth/idp/: cert.pem  key.pem
examples/idps/fusionauth/kickstart/: kickstart.json
examples/idps/keycloak/: realm-export.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_base64_response.rs  fuzz_c14n.rs  fuzz_xml_parse.rs
scripts/: coverage.sh
src/: attribute.rs  authn_context.rs  conditions.rs  error.rs  http.rs  idp.rs  lib.rs  nameid.rs  proxy.rs  replay.rs  schema.rs  sp.rs  time.rs
src/authn/: mod.rs  request_build.rs  request_parse.rs  request_validate.rs
src/binding/: artifact.rs  ecp.rs  mod.rs  post.rs  redirect.rs  soap.rs
src/crypto/: cert.rs  keypair.rs  mod.rs  verifier.rs
src/descriptor/: idp.rs  mod.rs  sp.rs
src/disco/: cdc.rs  mod.rs  service.rs
src/dsig/: algorithms.rs  c14n.rs  mod.rs  reference.rs  sign.rs  verify.rs
src/logout/: mod.rs  request_build.rs  request_parse.rs  response_build.rs  response_parse.rs
src/metadata/: emit_aggregate.rs  emit_idp.rs  emit_sp.rs  mod.rs  parse.rs
src/response/: identity.rs  issue.rs  mod.rs  parse.rs  validate.rs
src/xml/: emit.rs  mod.rs  parse.rs
src/xmlenc/: algorithms.rs  decrypt.rs  encrypt.rs  mod.rs
tests/: artifact_flow_test.rs  corpus_runner.rs  disco_flow_test.rs  encrypted_assertion_flow_test.rs  idp_flow_test.rs  interop_adfs_test.rs  interop_auth0_test.rs  interop_azure_ad_test.rs  interop_google_workspace_test.rs  interop_keycloak_test.rs  interop_okta_test.rs  interop_onelogin_test.rs  proxy_flow_test.rs  schema_test.rs  sp_flow_test.rs  strong_security_corpus.rs  xmlsec_interop.rs
tests/common/: fixtures.rs  mock_http_client.rs  mod.rs
tests/common/c14n_vectors/: LICENSE.xmlsec  README.md  exclusive-inclusive-prefixes-with-comments.xml  exclusive-inclusive-prefixes-without-comments.xml  exclusive-with-comments.xml  exclusive-without-comments.xml  merlin-exclusive-subset.xml
tests/corpus/synthetic/: xsw_pattern_5_assertion_in_signature_object.xml.base64  xsw_pattern_6_substituted_subject.xml.base64  xsw_pattern_8_namespace_injection.xml.base64
