[package]
name = "saml-idp-example"
version = "0.0.0"
edition = "2024"
publish = false
description = "Standalone SAML 2.0 Identity Provider built on the saml crate, paired with examples/demo to close the SP↔IdP loop end-to-end."
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "saml-idp-example"
path = "src/main.rs"

[features]
default = []
# Optional artifact-binding support. The saml crate's artifact path requires
# the `weak-algos` feature (SHA-1) per its public API; flip both on if you
# want this IdP example to expose `POST /saml/artifact`.
artifact-binding = ["saml/artifact-binding", "saml/weak-algos"]

[dependencies]
saml = { path = "../..", default-features = false, features = [
    "rsa-sha",
    "ecdsa-sha",
    "xmlenc",
    "metadata-emit",
    "slo",
] }

# Web stack
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# HTTP client used to fetch each SP's metadata at startup.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }

# Observability.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration files.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Session cookie crypto (HMAC-SHA256 signed JSON).
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
base64 = "0.22"

# Password hashing.
argon2 = "0.5"

# DEFLATE for HTTP-Redirect inbound decoding of SAMLRequest/SAMLResponse.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# Misc small utilities.
url = "2"
percent-encoding = "2"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
saml-demo = { path = "../demo" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "cookies",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious  = { level = "deny", priority = -1 }
complexity  = { level = "deny", priority = -1 }
perf        = { level = "deny", priority = -1 }
style       = { level = "deny", priority = -1 }
pedantic    = { level = "deny", priority = -1 }

# Example carve-outs - keep the bar high but allow a few pedantic items that
# would otherwise force noisy refactors in glue code.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
struct_field_names = "allow"
